# frozen

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  build.sh  check.sh  pyproject.toml  release.sh
.github/workflows/: pylint.yml  pytest.yml
src/frozen/: _deepfreeze.py
src/frzn/: __init__.py  _frozendict.py
test/: test_deepfreeze.py  test_frozendict.py
